--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "extension:css": "postcss app/extension.css -o extension/toolbar/bundle.css",
     "extension:copy": "cp app/bundle.js extension/toolbar/ && cp -R app/tuts/ extension/tuts/",
     "extension:zip": "rm -rf ./extension/build/* && mkdir ./visbug_v$npm_package_version && cp -R ./extension/* ./visbug_v$npm_package_version/ && zip -r ./extension/build/visbug_v$npm_package_version.zip ./visbug_v$npm_package_version && rm -rf ./visbug_v$npm_package_version",
-    "deploy": "gcloud app deploy --project=visbug-1337"
+    "deploy": "gcloud app deploy --project=visbug-1337",
+    "test": "ava"
   },
   "author": "",
   "license": "ISC",
@@ -27,8 +28,11 @@
     "ragrid": "^1.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "ava": "^1.0.1",
     "browser-sync": "^2.26.3",
     "concurrently": "^3.5.1",
+    "esm": "^3.0.84",
     "postcss": "^6.0.22",
     "postcss-cli": "^5.0.1",
     "postcss-import": "^11.1.0",
@@ -37,5 +41,16 @@
     "rollup": "^0.60.7",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-postcss": "^1.6.2"
+  },
+  "ava": {
+    "require" : [
+      "esm"
+    ],
+    "files": [
+      "tests/**/*.js"
+    ],
+    "sources": [
+      "**/*.js"
+    ]
   }
 }
